--- a/.htaccess
+++ b/.htaccess
@@ -12,4 +12,4 @@ RewriteRule (.*) /web/$1
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /yiishop/web/index.php
+RewriteRule . /web/index.php
